# senior_project

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: pages.yml
cmake/: CopyRuntime.cmake  EmbedShaders.cmake
docs/: about.md  api.md  docfx.json  getting-started.md  index.md  toc.yml
docs/components/: BV-Loader.md  LOD.md  PatchData.md  Pipeline.md  Tessellation.md  iPASS.md
docs/templates/glassy/public/: main.css
source/: Application.cpp  Application.h  main.cpp  main_native.cpp  main_wasm.cpp  nuklear_impl.cpp  shader.wgsl  tess-calc.h  tess-connectivity.h  tess-gen.h  tess-scan.h  tesselation.h  ui.wgsl
source/Camera/: Camera.cpp  Camera.h
source/InputManager/: InputManager.cpp  InputManager.h  KeyTable.h
source/Pass/: Pass.cpp  Pass.h
source/Pass/ComputePass/: ComputePass.h  IPass.cpp  IPass.h  TessellatorPass.cpp  TessellatorPass.h  iPass.cpp  iPass.h  ipass.wgsl
source/Pass/RenderPass/: RenderPass.h  SceneRenderPass.cpp  SceneRenderPass.h  UIRenderPass.cpp  UIRenderPass.h  UIStyle.h  scene.wgsl
source/Pass/RenderPass/shaders/: blinn_phong.wgsl  flat.wgsl  parametric_error.wgsl  triangle_size.wgsl
source/RenderContext/: GLFWRenderContext.cpp  GLFWRenderContext.h  RenderContext.cpp  RenderContext.h  WebRenderContext.cpp  WebRenderContext.h
source/RenderContext/GLFWRenderContext/: GLFWRenderContext.cpp  GLFWRenderContext.h
source/RenderContext/WebRenderContext/: WebRenderContext.cpp  WebRenderContext.h
source/RenderPass/: RenderPass.cpp  RenderPass.h  SceneRenderPass.cpp  SceneRenderPass.h  UIRenderPass.cpp  UIRenderPass.h
source/Renderer/: Context.h  GPUContext.h  RenderContext.h  Renderer.cpp  Renderer.h
source/Settings/: Settings.cpp  Settings.h
source/ShaderLoader/: ShaderLoader.h
source/Tessellator/: Connectivity.cpp  Connectivity.h  TessCalcPass.cpp  TessCalcPass.h  TessConstants.h  TessGenPass.cpp  TessGenPass.h  TessScanPass.cpp  TessScanPass.h  Tessellator.cpp  Tessellator.h  tess-calc.wgsl  tess-gen.wgsl  tess-scan.wgsl
source/Utils/: BVParser.cpp  BVParser.h  Elevation.cpp  Elevation.h  File.h  MVP.h  Platform.h  Shader.h  Utils.h
source/iPASS/: ipass.wgsl
tests/: CMakeLists.txt  test_scan.cpp  test_tess_quad.cpp
wasm/: shell.html
